tests/parser-test-files/bad-files/define-class.17.error
error: Malformed functional dependency
  --> test:4:23
   |
 4 |  (define-class (C :a :b (-> :b :c)))
   |                         ^^^^^^^^^^ expected one or more type variables
